# application

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  titanic.py  train.py  train_evaluate.py
.github/workflows/: prod.yml  test.yaml
app/: api.py  run.sh
src/models/: train_evaluate.py
src/pipeline/: build_pipeline.py
tests/: test_pipeline.py
