[project]
name = "application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv==0.9.9",
    "duckdb==1.4.4",
    "fastapi>=0.129.0",
    "loguru>=0.7.3",
    "mlflow>=3.10.0",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "pyarrow>=23.0.1",
    "pylint>=4.0.4",
    "scikit-learn==1.7.2",
    "uvicorn>=0.40.0",
]
